Fix logo scaling on mobile

--- a/sass/future.scss
+++ b/sass/future.scss
@@ -129,7 +129,7 @@ body {
 
   .logo {
     flex: 0 1 auto;
-    max-width: 512px;
+    max-width: min(100%, 512px);
     aspect-ratio: 512 / 120;
     min-width: 1.5in;
   }
